--- a/dcat/pubspec.yaml
+++ b/dcat/pubspec.yaml
@@ -1,16 +1,9 @@
-name: dcat
-description: A simple command-line application.
-version: 1.0.0
-# homepage: https://www.example.com
+name: "HelloDart"
 
 environment:
-  sdk: '>=2.16.2 <3.0.0'
-
-
-# dependencies:
-#   path: ^1.8.0
-
-dev_dependencies:
-  lints: ^1.0.0
+  sdk: '>=2.12.0 <3.0.0'
 dependencies: 
   args: ^2.3.0
+  shelf: ^1.3.0
+  shelf_router: ^1.1.2
+  shelf_static: ^1.1.0
